--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.9"
+    "@astrojs/check": "^0.9.4",
+    "astro": "^4.16.9",
+    "typescript": "^5.6.3"
   }
 }
