--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "astro": "^4.16.9",
+    "decap-cms-app": "^3.3.3",
+    "decap-cms-locales": "^3.2.0",
     "typescript": "^5.6.3"
   }
 }
