--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/tailwind": "^5.1.2",
     "astro": "^4.16.9",
     "decap-cms-app": "^3.3.3",
     "decap-cms-locales": "^3.2.0",
+    "marked": "^14.1.3",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "sass-embedded": "^1.80.6"
   }
 }
