--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -4,11 +4,7 @@ local_backend: true
 
 locale: "de"
 backend:
-  name: github
-  repo: tagesinsel-moelln/website # Path to your GitHub repository
-  branch: main
-  base_url: https://0cmb984hnh.execute-api.eu-central-1.amazonaws.com # your apigateway endpoint
-  auth_endpoint: /prod/auth
+  name: git-gateway
 editor:
   preview: false
 
@@ -236,6 +232,17 @@ collections:
             name: "hero"
             widget: image
 
+          - label: "Überschrift"
+            name: headline
+            widget: string
+
+          - name: "body"
+            widget: "markdown"
+
+      - label: "Impressum"
+        name: "imprint"
+        file: "src/content/pages/imprint.json"
+        fields:
           - label: "Überschrift"
             name: headline
             widget: string
