changes discussed in todays call

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -180,6 +180,10 @@ collections:
                 name: name
                 widget: string
 
+              - label: "Link zu Website"
+                name: link
+                widget: string
+
               - label: "Bild"
                 name: "thumbnail"
                 widget: "image"
